<resources>
    <string name="app_name">SFU Hive</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get Started</string>
    <string name="difficulty">Difficulty</string>
    <string name="time_spent_approx_in_hours">Time Spent</string>
    <string name="time_spent_in_hours">Time spent in hours</string>
    <string name="course">Course</string>
    <string name="assignment">Assignment</string>
    <string name="hours_spent">Hours Spent</string>
    <string name="average_hours_spent">Average Hours Spent</string>
    <string name="average_difficulty">Average Difficulty</string>
    <string name="important_dates">Important Dates</string>
    <string name="streak">Streak</string>
    <string name="streak_checkmarks">Streak Checkmarks</string>
    <string name="files">Files</string>
    <string name="calendar">Calendar</string>
    <string-array name="difficulty">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="progress_title">Progression Fragment</string>
    <string name="calendar_title">Calendar Fragment</string>
    <string name="dashboard_title">Dashboard Fragment</string>
    <string name="tasks_title">Tasks Fragment</string>
    <string name="wellness_title">Wellness Fragment</string>
    <string name="pinned_badge1">pinned badge 1</string>
    <string name="pinned_badge2">pinned badge 2</string>
    <string name="pinned_badge3">pinned badge 3</string>
    <string name="badges_title"><u>Badges</u></string>
    <string name="rewards_title"><u>Rewards</u></string>
    <string name="streaks_title">Streaks</string>
    <string name="not_found">Not Found</string>
    <string name="redeem">Redeem</string>
    <string name="recent">Recent</string>
    <string name="recent_file_image">Recent File Image</string>
    <string name="see_more_files">See more files</string>
    <string name="currency">Coins</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_stored_file_display">StoredFileDisplayActivity</string>
    <string name="file_icon">File icon</string>
    <string name="add_new_file">Add new file</string>
    <string name="no_files_found">No files found.</string>
    <string name="reset">Reset</string>
    <string name="delete_file">Delete File</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="warning_msg">Are you sure you want to delete this file?\n This action cannot be undone.</string>
    <string name="folder_image">Folder Image</string>
    <string name="temp_folder_name">CMPT 410</string>
    <string name="more_options">more_options</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="name_of_folder">Name of Folder</string>
    <string name="cmpt_110_assignments">CMPT 110 Assignments</string>
    <string name="my_calendar">My Calendar</string>
    <string name="wellness">Wellness</string>
    <string name="progression">Progression</string>

    <!-- Strings for activity_task_scan.xml -->
    <string name="photo_label">📷</string>
    <string name="upload_task_photo">Upload Task Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_from_gallery">Upload From Gallery</string>
    <string name="or_enter_manually">OR\nEnter Manually</string>
    <string name="task_title_hint">Task Title</string>
    <string name="due_date_hint">Due Date (yyyy-MM-dd)</string>
    <string name="time_hint">Time (HH:mm)</string>
    <string name="submit">Submit</string>
</resources>