<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id ="@+id/rewards_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewards_title"
            android:textSize="24sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="200dp">
            <ImageView
                android:id ="@+id/currency_image"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/image_not_found"
                android:layout_gravity="end"/>

                <TextView
                android:id ="@+id/currency_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/currency"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Adapted from: https://developer.android.com/develop/ui/views/layout/cardview-->
    <androidx.cardview.widget.CardView
        android:id = "@+id/featured_reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/featured_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/image_not_found"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/title"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="I'm a title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/featured_image" />

            <TextView
                android:id="@+id/subhead"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="I'm a subhead"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/cost"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subhead" />

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redeem"
                app:layout_constraintEnd_toEndOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/featured_image"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id= "@+id/badge_selection"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:numColumns="3">
    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>